=== master

* Make column schema entries on MySQL include an :extra entry for the Extra column in DESCRIBE output (bschmeck) (#1791)

* Update mock PostgreSQL adapter to default to PostgreSQL 14 instead of PostgreSQL 9.5 (jeremyevans)

* Support Dataset#with_recursive :search and :cycle options on PostgreSQL 14+ for result ordering and cycle detection (jeremyevans)

* Avoid method redefined verbose mode warnings in lazy_attributes plugin (jeremyevans)

=== 5.50.0 (2021-11-01)

* Make Migrator :allow_missing_migration_files also allow down migrations where the current database version is greater than the last migration file version (francisconeves97) (#1789)

* Fix Model#freeze in composition, serialization, and serialization_modification_detection plugins to return self (jeremyevans) (#1788)

* Fix typecasting of lazy columns when using lazy_attributes plugin in model where dataset selects from subquery (jeremyevans)

* Add :before_preconnect Database option, for configuring extensions loaded via :preconnect_extensions (MarcPer, jeremyevans) (#1786)

* Change Dataset#columns! to use a LIMIT 0 query instead of a LIMIT 1 query (jeremyevans)

* Add sql_log_normalizer extension for normalizing logged SQL, helpful for analytics and sensitive data (jeremyevans)

* Add support for range_merge, multirange, and unnest, and PGMultiRange#op to pg_range_ops extension (jeremyevans)

* Add pg_multirange extension with support for PostgreSQL 14+ multirange types (jeremyevans)

=== 5.49.0 (2021-10-01)

* Switch block_given? usage to defined?(yield) (jeremyevans)

* Support table aliases for JOIN USING columns on PostgreSQL 14+ (jeremyevans)

* Support calling PostgreSQL procedures without arguments (jeremyevans)

* Support hstore subscripts in pg_hstore_ops on PostgreSQL 14+, for updating only part of an hstore value (jeremyevans)

* Support JSONB subscripts in pg_json_ops on PostgreSQL 14+, for updating only part of a JSONB value (jeremyevans)
